--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -26,6 +27,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CodeBrains"
         tools:targetApi="31">
+        <activity
+            android:name=".messaging.Chat"
+            android:exported="false" />
+        <activity android:name=".messaging.ChatDetails"
+            android:exported="false"/>
+
         <activity
             android:name=".Job_View_Details"
             android:exported="false" />
