--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,10 +27,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CodeBrains"
         tools:targetApi="31">
+
+        <!-- Add FindjobActivity declaration here -->
+        <activity
+            android:name=".freelancer.FindjobActivity"
+            android:label="Find Jobs"
+            android:parentActivityName=".Homepage_developer"
+            android:exported="true">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Homepage_developer" />
+        </activity>
+
+        <!-- Keep existing activities below -->
         <activity
             android:name=".messaging.Chat"
             android:exported="false" />
-        <activity android:name=".messaging.ChatDetails"
+        <activity
+            android:name=".messaging.ChatDetails"
             android:exported="false"/>
 
         <activity
@@ -59,7 +73,7 @@
             android:label="@string/title_activity_homepage"
             android:theme="@style/Theme.CodeBrains.NoActionBar" />
         <activity
-            android:name=".freelancer_form1"
+            android:name=".freelancer.freelancer_form1"
             android:exported="false" />
         <activity
             android:name=".Freelancer_register"
@@ -84,10 +98,8 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
