--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
+
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission
@@ -28,6 +29,9 @@
         android:theme="@style/Theme.CodeBrains"
         tools:targetApi="31">
         <activity
+            android:name=".freelancer.CompletedJobsActivity"
+            android:exported="false" />
+        <activity
             android:name=".payment1"
             android:exported="false" />
 
@@ -39,8 +43,9 @@
         <service
             android:name=".services.FirebaseProposalListenerService"
             android:exported="false" />
-        <service android:name=".services.FirebaseConnectionService"
-            android:exported="false"/>
+        <service
+            android:name=".services.FirebaseConnectionService"
+            android:exported="false" />
 
         <activity
             android:name=".messaging.Chat"
