--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
+    <uses-permission android:name="android.permission.SEND_SMS"
+        tools:ignore="PermissionImpliesUnsupportedChromeOsHardware" />
 
     <application
         android:allowBackup="true"
@@ -31,6 +33,9 @@
         android:theme="@style/Theme.CodeBrains"
         tools:targetApi="31">
         <activity
+            android:name=".PaymentSuccess"
+            android:exported="false" />
+        <activity
             android:name=".reevaluation.ReevaluationDetailActivity"
             android:exported="false" />
         <activity
@@ -41,6 +46,9 @@
             android:exported="false" />
         <activity
             android:name=".Submitted_job"
+            android:exported="false" />
+        <activity
+            android:name=".HiredJobsActivity"
             android:exported="false" />
         <activity
             android:name=".JobListActivity"
